# lmac-driver

./: CMakeLists.txt  README.md  lmac_driver_flags.h.in  lmac_driver_flags_template.txt
inc/: lmac.h  lmac_hw.h
src/: lmac.c  lmac_hw.c
